<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tabs_actionbar_shop_recommend"
        android:textColor="@color/white"
        android:background="@color/customappred"
        android:focusable="false"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/tabs_actionbar_shop_near"
        android:textColor="@color/white"
        android:background="@color/customappred"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/tabs_actionbar_shop_search"
        android:textColor="@color/white"
        android:background="@color/customappred"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/tabs_actionbar_shop_top"
        android:textColor="@color/white"
        android:background="@color/customappred"/>

</LinearLayout>