<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="80dp"
               android:layout_margin="5dp" >
                   <ImageButton
                       android:layout_width="100dp"
                       android:layout_height="75dp"
                       android:layout_gravity="center_vertical"
                       android:background="@drawable/list_food"
                       android:contentDescription="@string/app_name"
                       android:onClick="onClick" />

                   <LinearLayout
                       android:layout_width="200dp"
                       android:layout_height="80dp"
                       android:layout_marginLeft="105dp"
                       android:layout_marginStart="105dp"
                       android:layout_gravity="center_vertical"
                       android:orientation="vertical">
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/demotext_foodlist_title"
                           android:textSize="13dp"
                           android:textStyle="bold" />
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/demotext_foodlist_reviews"
                           android:textSize="11dp"
                           android:textColor="#AAAAAA"
                           android:textStyle="normal" />
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/demotext_foodlist_content"
                           android:textSize="11dp"
                           android:textStyle="normal" />
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/demotext_foodlist_location"
                           android:textSize="11dp"
                           android:textStyle="normal" />
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/demotext_foodlist_type"
                           android:textSize="11dp"
                           android:textColor="#AAAAAA"
                           android:textStyle="normal" />
                   </LinearLayout>
                   <RelativeLayout 
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:layout_alignParentRight="true"
                       android:layout_alignParentEnd="true"
                       android:layout_marginRight="5dp"
                       android:orientation="vertical"
                       >

                       <ImageButton
                           android:layout_width="50dp"
                           android:layout_height="50dp"
                           android:layout_alignParentBottom="true"
                           android:layout_marginBottom="5dp"
                           android:background="@drawable/ic_call"
                           android:onClick="onClick" />
                   </RelativeLayout>
           <View  android:layout_height="1px" 
           android:layout_width="match_parent"
           android:background="#DDDDDD"/>
</RelativeLayout>
