<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="63.0dp"
    android:layout_gravity="center_vertical"
    android:background="@color/customappred" >
    <ImageButton
        android:id="@+id/btn_error_back"
        style="@style/widget_actionbar"
        android:layout_marginLeft="12.0dp"
        android:layout_marginTop="12.0dp"
        android:background="@drawable/ic_back"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:onClick="onBackClick"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:text="@string/title_error"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:contentDescription="@string/app_name" />
    
    <TextView
        android:id="@+id/txt_error_submit"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12.0dp"
        android:layout_centerVertical="true"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="@string/txt_error_submit"
        android:textColor="@color/white"
        android:gravity="right"
        android:textSize="16sp"
        android:contentDescription="@string/app_name"
        />
</RelativeLayout>
