<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="63.0dp"
    android:id="@+id/actionbar_shop"
    android:background="@color/customappred"
    android:layout_gravity="center_vertical">
    <ImageButton
        android:id="@+id/btn_share_back"
        android:layout_marginLeft="12.0dp"
        android:layout_marginTop="12.0dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_back"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:onClick="onBackClick"
        />

    <TextView
        android:id="@+id/txtshareTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:text="@string/title_share"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:contentDescription="@string/app_name" />
    
    <TextView
        android:id="@+id/txt_share_find_history"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12.0dp"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/txt_share_find_history"
        android:textColor="@color/white"
        android:gravity="right"
        android:textSize="16sp"
        android:contentDescription="@string/app_name"
        />
</RelativeLayout>