<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="63.0dp"
    android:id="@+id/actionbarLayoutMain"
    android:layout_gravity="center_horizontal"
    android:background="@color/customappred">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:orientation="horizontal"
        android:gravity="center"
        android:padding="4dp"
        android:background="@color/wathetblue"
		android:layout_centerVertical="true"
		android:layout_toLeftOf="@+id/btnIndexSearch"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp">

		<TextView
			android:id="@+id/txt_hot_title_best"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/txt_tab_hot"
			android:textSize="16sp"
			android:textColor="#FFFFFF"
			android:contentDescription="@string/app_name"
			android:layout_weight="1"
			android:gravity="center_horizontal"/>
		<View
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="4dp"
			android:background="@color/white"/>
        <TextView
	        android:id="@+id/txt_hot_title_food"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_tab_food"
	        android:textSize="16sp"
	        android:contentDescription="@string/app_name"
	        android:layout_weight="1"
			android:textColor="#FFFFFF"
			android:gravity="center_horizontal"/>
        <View 
	        android:layout_width="1dp"
	        android:layout_height="match_parent"
	        android:layout_marginTop="4dp"
	        android:layout_marginBottom="4dp"
	        android:background="@color/white"/>
        <TextView
	        android:id="@+id/txt_hot_title_shop"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_tab_shop"
	        android:textSize="16sp"
	        android:contentDescription="@string/app_name"
	        android:layout_weight="1"
			android:textColor="#FFFFFF"
			android:gravity="center_horizontal"/>
        <View 
	        android:layout_width="1dp"
	        android:layout_height="match_parent"
	        android:layout_marginTop="4dp"
	        android:layout_marginBottom="4dp"
	        android:background="@color/white"/>
        <TextView 
            android:id="@+id/txt_hot_title_attention"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_tab_attention"
	        android:textSize="16sp"
	        android:textColor="#FFFFFF"
	        android:contentDescription="@string/app_name" 
	        android:layout_weight="1"
			android:gravity="center_horizontal"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/btnIndexSearch"
        android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
        android:layout_marginRight="12.0dp"
        android:layout_marginTop="12.0dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_search"
        android:contentDescription="@string/app_name"
        />

</RelativeLayout>

