<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:orientation="vertical"
    android:background="@color/whitesmoke" >
    
    <TextView 
        android:id="@+id/txt_error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/txt_error_label"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/edit_error_content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/txt_error_hint"
        android:minLines="5"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:background="@color/white"
        android:textSize="16sp"
        />
    <LinearLayout 
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_error_email_label"
            android:textSize="20sp"/>
        <EditText 
            android:layout_marginLeft="8dp"
            android:id="@+id/edit_error_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>
